added meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is the landing page for the audio speaker.This is the landing page for the audio speaker.This is the landing page for the audio speaker."
+    />
+    <meta
+      name="keywords"
+      content="audio,audio speaker, speaker, music, sound, music device"
+    />
     <title>Audio speaker</title>
     <link
       rel="stylesheet"
