--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
               rem officiis doloribus quam harum debitis, velit eligendi deleniti
               eaque, qui, temporibus sit eveniet rerum perferendis.
             </p>
+            <span class="price">$130.00</span>
             <a href="#" class="btn">Buy Now</a>
           </div>
         </div>
